update all as per my reqyrements

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>A n u p a m profile</title>
+    <title>Anupam Biswas portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   </head>
 
@@ -17,10 +17,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#project">Projects</a>
-            <a class="nav-link" href="#">About</a>
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link active" aria-current="page" href="#carouselExampleDark">Home</a>
+            <a class="nav-link" href="#code">Projects</a>
+            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link" href="#contactme">Contact</a>
           </div>
         </div>
       </div>
@@ -65,7 +65,7 @@
   </button>
 </div>
 
-<div id="project"class="container">
+<div id="code" class="container">
   <style>
     .container{
       margin-top: 30px;
@@ -77,9 +77,9 @@
       Featured
     </div>
     <div class="card-body">
-      <h5 class="card-title">Special title treatment</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      <h5 class="card-title"> Github project's </h5>
+      <p class="card-text"> this is my all git hub repo you can use my all project for your need. </p>
+      <a href="https://github.com/Ripax" class="btn btn-primary"> Github </a>
     </div>
     <div class="card-footer text-muted">
       2 days ago
@@ -87,7 +87,7 @@
   </div>
 </div>
 
-<div class="container">
+<div id="project" class="container">
   <style>
     .container{
       margin-top: 30px;
@@ -132,33 +132,51 @@
       </div>
     </div>
   </div>
-
 </div>
 
-<div class="container">
+<div id="about" class="container">
   <style>
     .container{
       margin-top: 30px;
     }
   </style>
+
   <div class="card text-center">
     <div class="card-header">
-      <ul class="nav nav-tabs card-header-tabs">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="true" href="#"> About Me </a>
-        </li>
-      </ul>
+      About me
     </div>
     <div class="card-body">
       <h5 class="card-title"> Anupam Biswas </h5>
-      <p class="card-text">iam vfx Compositor / compositing TD in MPC Bangalore IND.</p>
+      <p class="card-text"> iam vfx Compositor / compositing TD in MPC Bangalore IND. </p>
       <a href="https://www.linkedin.com/in/anupam0007/" class="btn btn-primary"> linkedin </a>
     </div>
+    <div class="card-footer text-muted">
+      2 days ago
+    </div>
   </div>
-
 </div>
 
+<div id="contactme" class="container">
+  <style>
+    .container{
+      margin-top: 30px;
+    }
+  </style>
 
+  <div class="card text-center">
+    <div class="card-header">
+      Contact me
+    </div>
+    <div class="card-body">
+      <h5 class="card-title"> Anupam Biswas </h5>
+      <p class="card-text"> email : ripanbiswas007@gmail.com </p>
+      <p class="card-text"> phone : +91 7679135094 </p>
+    </div>
+    <div class="card-footer text-muted">
+      2 days ago
+    </div>
+  </div>
+</div>
 
 <div class="container-footer">
   <style>
@@ -175,7 +193,6 @@
       Someone famous in <cite title="Source Title">Source Title</cite>
     </figcaption>
   </figure>
-
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
