updte to my gh-pages

--- a/index.html
+++ b/index.html
@@ -165,12 +165,18 @@
   </style>
 
   <div class="card text-center">
-    <div class="card-body">
+    <div id="card_BG" class="card-body">
+
       <iframe src="https://player.vimeo.com/video/726269633?h=753a551aad" width="1260" height="564"allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
     <div class="card-footer text-muted">
       Update My latest compositing showreel.
     </div>
+    <style>
+      .card_BG{
+        background-color: black;
+      }
+    </style>
   </div>
 </div>
 
