removed card footer from contact

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </div>
 
 <div id="code" class="container">
-  <style>
+<style>
     .container{
       margin-top: 30px;
     }
@@ -191,9 +191,6 @@
       <p class="card-text"> email : ripanbiswas007@gmail.com </p>
       <p class="card-text"> phone : +91 7679135094 </p>
     </div>
-    <div class="card-footer text-muted">
-      2 days ago
-    </div>
   </div>
 </div>
 
@@ -206,10 +203,10 @@
 
   <figure class="text-center">
     <blockquote class="blockquote">
-      <p>A well-known quote, contained in a blockquote element.</p>
+      <p> A lot of times, people don't know what they want until you show it to them </p>
     </blockquote>
     <figcaption class="blockquote-footer">
-      Someone famous in <cite title="Source Title">Source Title</cite>
+      Steve Jobs <cite title="Source Title">Co-founder of Apple</cite>
     </figcaption>
   </figure>
 </div>
