--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="#carouselExampleDark">Home</a>
-            <a class="nav-link" href="#code">Projects</a>
+            <a class="nav-link" href="#project">Projects</a>
             <a class="nav-link" href="#about">About</a>
             <a class="nav-link" href="#contactme">Contact</a>
           </div>
@@ -63,28 +63,6 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
-</div>
-
-<div id="code" class="container">
-<style>
-    .container{
-      margin-top: 30px;
-    }
-  </style>
-
-  <div class="card text-center">
-    <div class="card-header">
-      Featured
-    </div>
-    <div class="card-body">
-      <h5 class="card-title"> Github project's </h5>
-      <p class="card-text"> this is my all git hub repo you can use my all project for your need. </p>
-      <a href="https://github.com/Ripax" class="btn btn-primary"> Github </a>
-    </div>
-    <div class="card-footer text-muted">
-      2 days ago
-    </div>
-  </div>
 </div>
 
 <div id="project" class="container">
@@ -134,6 +112,104 @@
   </div>
 </div>
 
+<div class="container">
+  <style>
+    .workexpreance{
+      margin-top: 30px;
+    }
+  </style>
+</div>
+
+<div id="workexpreance" class="container">
+  <style>
+    .workexpreance{
+      margin-top: 30px;
+    }
+  </style>
+
+  <div class="card text-center">
+    <div class="card-header">
+      Work Expreances
+    </div>
+    <table class="table table-dark table-striped table-bordered">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Company</th>
+          <th scope="col">Post</th>
+          <th scope="col">Duration</th>
+        </tr>
+      </thead>
+      <tbody class="table-group-divider">
+        <tr>
+          <th scope="row">1</th>
+          <td>MPC Film</td>
+          <td>Compositing Technical Director</td>
+          <td>1st October2021 to till date.</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td>MPC Film</td>
+          <td>VFX Compositor</td>
+          <td>9th October 2017 to 31st September.</td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td>Redchillies VFX</td>
+          <td>VFX Compositor</td>
+          <td>14th November to 4th October 2017.</td>
+        </tr>
+        <tr>
+          <th scope="row">4</th>
+          <td>Drishyam VFX</td>
+          <td>VFX Compositor</td>
+          <td>15th July 2016 to 12th November 2016.</td>
+        </tr>
+        <tr>
+          <th scope="row">5</th>
+          <td>Vertex Volt Studio</td>
+          <td>Jr. VFX Compositor</td>
+          <td>3rd December2015 to 12th July 2016.</td>
+        </tr>
+        <tr>
+          <th scope="row">6</th>
+          <td>Pixel Mazik Studio</td>
+          <td>Lightng & Compositng Artst</td>
+          <td>4th March 2015 to 30th November 2015.</td>
+        </tr>
+        <tr>
+          <th scope="row">7</th>
+          <td>Matra Studios LLP</td>
+          <td>3D Generalist</td>
+          <td>2nd June2014 to 30th December2014.</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+<div id="code" class="container">
+  <style>
+      .container{
+        margin-top: 30px;
+      }
+    </style>
+  
+    <div class="card text-center">
+      <div class="card-header">
+        Featured
+      </div>
+      <div class="card-body">
+        <h5 class="card-title"> Github project's </h5>
+        <p class="card-text"> this is my all git hub repo you can use my all project for your need. </p>
+        <a href="https://github.com/Ripax" class="btn btn-primary"> Github </a>
+      </div>
+      <div class="card-footer text-muted">
+        2 days ago
+      </div>
+    </div>
+  </div>
+
 <div id="about" class="container">
   <style>
     .container{
@@ -156,7 +232,6 @@
   </div>
 </div>
 
-
 <div id="Showreel" class="container">
   <style>
     .container{
@@ -166,8 +241,7 @@
 
   <div class="card text-center">
     <div id="card_BG" class="card-body">
-
-      <iframe src="https://player.vimeo.com/video/726269633?h=753a551aad" width="1260" height="564"allow="autoplay; fullscreen" allowfullscreen></iframe>
+      <iframe src="https://player.vimeo.com/video/726269633?h=753a551aad" width="1000" height="564"allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
     <div class="card-footer text-muted">
       Update My latest compositing showreel.
