update index need to check linking

--- a/index.html
+++ b/index.html
@@ -28,20 +28,6 @@
             <li class="nav-item">
               <a class="nav-link" href="#contactme">Contact</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
-            </li>
           </ul>
         </div>
       </div>
@@ -133,13 +119,77 @@
   </div>
 </div>
 
-<div class="container">
+<div id="career-objectves" class="container">
   <style>
-    .workexpreance{
+    .career-objectves{
       margin-top: 30px;
     }
   </style>
+
+  <div class="card">
+    <div class="card-header">
+      <b>Career Objectves</b>
+    </div>
+    <div class="card-body">
+      <p class="card-text">I spent my childhood and my teenage years immersed in comic books, movies and video games. So i decided
+        to specialize in Compositng as it is the culminaton of all of this. I love not only giving life to a piece, but
+        bringing it to a fine polish. On my path I have learned the discipline, enthusiasm, patence and endurance
+        necessary to complete a job as well as the absolute importance of cooperaton for its success</p>
+    </div>
+  </div>
 </div>
+
+<div id="technical-skills" class="container">
+  <style>
+    .technical-skills{
+      margin-top: 30px;
+    }
+  </style>
+  
+  <div class="card">
+    <div class="card-header">
+      <b>Technical Skills</b>
+    </div>
+    <div class="card-body">
+      <p class="card-text"> Bash, Python, Html, css </p>
+    </div>
+  </div>
+</div>
+
+<div id="sotware-knowledge" class="container">
+  <style>
+    .sotware-knowledge{
+      margin-top: 30px;
+    }
+  </style>
+  <div class="card">
+    <div class="card-header">
+      <b>Software Knowledge</b>
+    </div>
+    <div class="card-body">
+      <p class="card-text">Nuke, Adobe photoshop, Adobe Aftereffect, QT</p>
+    </div>
+  </div>
+</div>
+
+<div id="links" class="container">
+  <style>
+    .links{
+      margin-top: 30px;
+    }
+  </style>
+  <div class="card">
+    <div class="card-header">
+      <b>Online profiles</b>
+    </div>
+    <div class="card-body">
+      <a href="https://www.linkedin.com/in/anupam0007/" class="btn btn-primary"> linkedin </a>
+      <a href="https://www.imdb.com/name/nm10617085/" class="btn btn-primary"> imdb </a>
+      <a href="https://github.com/Ripax" class="btn btn-primary"> Github </a>
+    </div>
+  </div>
+</div>
+
 
 <div id="workexpreance" class="container">
   <style>
@@ -209,28 +259,6 @@
   </div>
 </div>
 
-<div id="code" class="container">
-  <style>
-      .container{
-        margin-top: 30px;
-      }
-    </style>
-  
-    <div class="card text-center">
-      <div class="card-header">
-        Featured
-      </div>
-      <div class="card-body">
-        <h5 class="card-title"> Github project's </h5>
-        <p class="card-text"> this is my all git hub repo you can use my all project for your need. </p>
-        <a href="https://github.com/Ripax" class="btn btn-primary"> Github </a>
-      </div>
-      <div class="card-footer text-muted">
-        2 days ago
-      </div>
-    </div>
-  </div>
-
 <div id="about" class="container">
   <style>
     .container{
@@ -265,7 +293,7 @@
       <iframe src="https://player.vimeo.com/video/726269633?h=753a551aad" width="1000" height="564"allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
     <div class="card-footer text-muted">
-      Update My latest compositing showreel.
+      My latest compositing showreel.
     </div>
   </div>
 </div>
