update index, need tocheck linking

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <nav class="navbar sticky-top navbar-expand-lg bg-dark">
+    <nav class="navbar sticky-top navbar-expand-lg bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="https://ripax.github.io/portfolio"> A n u p a m </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -115,6 +115,24 @@
           <small class="text-muted">Last updated 3 mins ago</small>
         </div>
       </div>
+    </div>
+  </div>
+</div>
+
+<div id="about" class="container">
+  <style>
+    .container{
+      margin-top: 30px;
+    }
+  </style>
+
+  <div class="card">
+    <div class="card-header">
+      <b>About me</b>
+    </div>
+    <div class="card-body">
+      <h5 class="card-title"> Anupam Biswas </h5>
+      <p class="card-text"> iam vfx Compositor / compositing TD in MPC Bangalore IND. </p>
     </div>
   </div>
 </div>
@@ -259,28 +277,6 @@
   </div>
 </div>
 
-<div id="about" class="container">
-  <style>
-    .container{
-      margin-top: 30px;
-    }
-  </style>
-
-  <div class="card text-center">
-    <div class="card-header">
-      About me
-    </div>
-    <div class="card-body">
-      <h5 class="card-title"> Anupam Biswas </h5>
-      <p class="card-text"> iam vfx Compositor / compositing TD in MPC Bangalore IND. </p>
-      <a href="https://www.linkedin.com/in/anupam0007/" class="btn btn-primary"> linkedin </a>
-    </div>
-    <div class="card-footer text-muted">
-      2 days ago
-    </div>
-  </div>
-</div>
-
 <div id="Showreel" class="container">
   <style>
     .container{
@@ -307,7 +303,7 @@
 
   <div class="card text-center">
     <div class="card-header">
-      Contact me
+      <b>Contact me</b>
     </div>
     <div class="card-body">
       <h5 class="card-title"> Anupam Biswas </h5>
