update date in redchillies

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
           <th scope="row">3</th>
           <td>Redchillies VFX</td>
           <td>VFX Compositor</td>
-          <td>14th November to 4th October 2017.</td>
+          <td>14th November 2016 to 4th October 2017.</td>
         </tr>
         <tr>
           <th scope="row">4</th>
