--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
     </div>
     <div class="card-body">
       <h5 class="card-title"> Anupam Biswas </h5>
-      <p class="card-text"> iam vfx Compositor / compositing TD in MPC Bangalore IND. </p>
+      <p class="card-text"> Technical Director with a passion for bartending always aiming to learn more and grow in the visual effects industry. 
+Skilled in Python, Nuke, Vray, and Renderman with the capability to adapt quickly to new software.</p>
     </div>
   </div>
 </div>
