update index.html added work expreances and about me.

--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@
       <b>About me</b>
     </div>
     <div class="card-body">
-      <h5 class="card-title"> Anupam Biswas </h5>
-      <p class="card-text"> Technical Director with a passion for bartending always aiming to learn more and grow in the visual effects industry. 
+      <p class="card-text"> Technical Director with a passion for bartending always aiming to learn more and grow in the visual effects industry.
 Skilled in Python, Nuke, Vray, and Renderman with the capability to adapt quickly to new software.</p>
     </div>
   </div>
@@ -231,42 +230,48 @@ Skilled in Python, Nuke, Vray, and Renderman with the capability to adapt quickl
       <tbody class="table-group-divider">
         <tr>
           <th scope="row">1</th>
-          <td>MPC Film</td>
+          <td>Framestore</td>
           <td>Compositing Technical Director</td>
-          <td>1st October2021 to till date.</td>
+          <td>19th December 2022 to till date.</td>
         </tr>
         <tr>
           <th scope="row">2</th>
+          <td>MPC Film</td>
+          <td>Compositing Technical Director</td>
+          <td>1st October2021 to 14th December 2022.</td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
           <td>MPC Film</td>
           <td>VFX Compositor</td>
           <td>9th October 2017 to 31st September.</td>
         </tr>
         <tr>
-          <th scope="row">3</th>
+          <th scope="row">4</th>
           <td>Redchillies VFX</td>
           <td>VFX Compositor</td>
           <td>14th November 2016 to 4th October 2017.</td>
         </tr>
         <tr>
-          <th scope="row">4</th>
+          <th scope="row">5</th>
           <td>Drishyam VFX</td>
           <td>VFX Compositor</td>
           <td>15th July 2016 to 12th November 2016.</td>
         </tr>
         <tr>
-          <th scope="row">5</th>
+          <th scope="row">6</th>
           <td>Vertex Volt Studio</td>
           <td>Jr. VFX Compositor</td>
           <td>3rd December2015 to 12th July 2016.</td>
         </tr>
         <tr>
-          <th scope="row">6</th>
+          <th scope="row">7</th>
           <td>Pixel Mazik Studio</td>
           <td>Lightng & Compositng Artst</td>
           <td>4th March 2015 to 30th November 2015.</td>
         </tr>
         <tr>
-          <th scope="row">7</th>
+          <th scope="row">8</th>
           <td>Matra Studios LLP</td>
           <td>3D Generalist</td>
           <td>2nd June2014 to 30th December2014.</td>
