--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Anupam Biswas portfolio</title>
     <!-- Favicon -->
-    <link rel="icon" href="/img/febicon.ico" alt="Anupam Biswas | Icons">
+    <link rel="icon" href="/img/icons/febicon.ico" alt="Anupam Biswas | Icons">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <style>
