--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Anupam Biswas portfolio</title>
     <!-- Favicon -->
-    <link rel="icon" href="/img/icons/febicon.ico" alt="Anupam Biswas | Icons">
+    <link rel="icon" href="img/icons/febicon.ico" alt="Anupam Biswas | Icons">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <style>
@@ -63,14 +63,14 @@
                 }
                 @font-face {
                     font-family: 'neon-logo';
-                    src: url('/fonts/neon-logo.TTF') format('truetype');
+                    src: url('fonts/neon-logo.TTF') format('truetype');
                 }
                 .navbar-logo {
                     text-decoration: none;
                     margin-left: -10px;
                     margin-right: 10px;
-                    font-family: neon-logo;
-                    font-size: 20px;
+                    font-family: clip;
+                    font-size: 40px;
                     color: #47f57b;
                     text-align: center;
                     animation: navbar-logo 2s ease-in-out infinite alternate;
@@ -104,7 +104,7 @@
                         <a class="nav-link" href="#contactme">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/documents/Anupam_Biswas_2024.pdf">Updated CV </a>
+                        <a class="nav-link" href="documents/Anupam_Biswas_2024.pdf">Updated CV </a>
                         <style>
                             .nav-link-download {
                                 color: #caccce;
