fixed the bs-link-hover-color

--- a/index.html
+++ b/index.html
@@ -10,20 +10,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <style>
+        :root {
+            --bs-link-hover-color: #97ff9e;
+        }
         body {
             background-color: #121212;
             color: #ffffff;
-        }
-        .a {
-            color: #00000000;
-            text-decoration: none;
         }
         .carousel-indicators button {
             background-color: #6c757d;
         }
 
         .text-muted {
-            --bs-text-opacity: ;
+            --bs-text-opacity: 1;
             color: #caccce !important;
         }
 
