update the project description.

--- a/index.html
+++ b/index.html
@@ -330,6 +330,45 @@
             </div>
         </div>
 
+        <div id="project" class="container">
+            <style>
+                .sotware-knowledge {
+                    margin-top: 30px;
+                }
+            </style>
+            <div class="card">
+                <div class="card-header">
+                    <b>Project</b>
+                </div>
+                <div class="card-body">
+                    <p class="card-text">
+                        Project Descriptions:
+                        <dl>
+                            <dt><b>SendAnnotation</b></dt>
+                            <dd>
+                                - The SendAnnotation project was designed to facilitate the seamless sharing and management of annotations. 
+                                Leveraging advanced backend technologies, this system allows users to annotate documents, images, and other content, and then share these annotations with collaborators in real-time. 
+                                The intuitive user interface ensures a smooth experience, enabling efficient collaboration and communication among users.
+                            </dd>
+                            <dt><b>UserInfo</b></dt>
+                            <dd>
+                                - The UserInfo project focused on developing a robust user information management system. 
+                                This system provides a centralized platform where user data is stored, managed, and accessed securely. 
+                                Through the UserInfo system, administrators can efficiently handle user profiles, preferences, and settings, ensuring personalized and tailored user experiences across various applications and services.
+                            </dd>
+                            <dt><b>Send Notification to User</b></dt>
+                            <dd>
+                                - The Send Notification to User project aimed to enhance user engagement and communication by implementing a notification system. 
+                                This system allows administrators and applications to send real-time notifications to users, keeping them informed about important updates, events, or actions. 
+                                Utilizing push notification technologies, this system ensures timely and relevant communication, enhancing user satisfaction and interaction with the platform.
+                            </dd>
+                        </dl>
+                    </p>
+                </div>
+            </div>
+        </div>
+
+
         <div id="work-expreance" class="container">
             <style>
                 .work-expreance {
