update the font and added project decription.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="icon" href="img/icons/febicon.ico" alt="Anupam Biswas | Icons">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <script src="js/script.js"></script>
+    <!-- Local style -->
     <style>
         :root {
             --bs-link-hover-color: #97ff9e;
@@ -61,14 +63,16 @@
                    src: url("fonts/clip.ttf") format('truetype');
                 }
                 @font-face {
-                    font-family: 'neon-logo';
-                    src: url('fonts/neon-logo.TTF') format('truetype');
+                   font-family: 'hangedlatter';
+                   src: url("fonts/HangedLetters.ttf") format('truetype');
                 }
                 .navbar-logo {
                     text-decoration: none;
+                    margin-top: -10px;
                     margin-left: -10px;
                     margin-right: 10px;
                     font-family: clip;
+                    /* font-family: hangedlatter; */
                     font-size: 40px;
                     color: #47f57b;
                     text-align: center;
@@ -267,9 +271,12 @@
                 <b>About me</b>
             </div>
             <div class="card-body">
-                <p class="card-text">Technical Director with a passion for bartending always aiming to learn more and
-                    grow in the visual effects industry.
-                    Skilled in Python, Nuke, Vray, and Renderman with the capability to adapt quickly to new software.
+                <p class="card-text">As a Technical Director with a passion for bartending, I am always eager to expand my knowledge and expertise within the visual effects industry. I am proficient in Python and have hands-on experience with industry-standard software such as Nuke, V-Ray, and RenderMan.
+                    My technical skills enable me to adapt quickly to new software environments and workflows, ensuring efficient and high-quality project execution.
+                    In addition to my technical acumen, I bring a creative flair to my work, blending technical expertise with artistic sensibility.
+                    This unique combination allows me to contribute effectively to both the technical and creative aspects of visual effects projects.
+
+                    I am committed to continuous learning and growth, staying updated with the latest industry trends and advancements. With a strong foundation in technical skills and a passion for the craft, I am well-equipped to tackle complex challenges and contribute to the success of any visual effects team.
                 </p>
             </div>
         </div>
@@ -286,13 +293,11 @@
                     <b>Career Objectves</b>
                 </div>
                 <div class="card-body">
-                    <p class="card-text">I spent my childhood and my teenage years immersed in comic books, movies and
-                        video games. So i decided
-                        to specialize in Compositng as it is the culminaton of all of this. I love not only giving life
-                        to a piece, but
-                        bringing it to a fine polish. On my path I have learned the discipline, enthusiasm, patence and
-                        endurance
-                        necessary to complete a job as well as the absolute importance of cooperaton for its success</p>
+                    <p class="card-text">From my childhood days engrossed in comic books, movies, and video games, I developed a deep appreciation for visual storytelling. This passion naturally led me to specialize in compositing, a field that combines artistry with technical expertise. In compositing, I've mastered the use of industry-standard software like Adobe After Effects and Nuke, enabling me to seamlessly integrate various visual elements into a cohesive whole.
+                        I take pride in not just animating a scene but refining it to perfection, ensuring color accuracy, lighting consistency, and seamless transitions. Along my professional journey, I've honed essential skills such as discipline, attention to detail, and problem-solving—traits that are crucial for delivering high-quality work on time.
+                        Furthermore, I've learned firsthand the importance of collaboration and teamwork. Working closely with directors, designers, and fellow artists, I've experienced the synergistic effect of pooling diverse talents and perspectives, resulting in projects that exceed expectations.
+                        In summary, my technical proficiency, combined with a passion for visual storytelling, equips me to bring creative visions to life while adhering to industry standards and fostering collaborative success.
+                        </p>
                 </div>
             </div>
         </div>
@@ -306,7 +311,7 @@
 
             <div class="card">
                 <div class="card-header">
-                    <b>Technical Skills</b>
+                    <b>&#128432; Technical Skills</b>
                 </div>
                 <div class="card-body">
                     <p class="card-text"> Bash, Python, Html, css </p>
@@ -322,7 +327,7 @@
             </style>
             <div class="card">
                 <div class="card-header">
-                    <b>Software Knowledge</b>
+                    <b>&#9881; Software Knowledge</b>
                 </div>
                 <div class="card-body">
                     <p class="card-text">Nuke, Adobe photoshop, Adobe Aftereffect, QT</p>
@@ -338,31 +343,45 @@
             </style>
             <div class="card">
                 <div class="card-header">
-                    <b>Project</b>
+                    <b>🔧 Project Descriptions</b>
                 </div>
                 <div class="card-body">
                     <p class="card-text">
-                        Project Descriptions:
+                        🚀 Excited to share my latest projects showcasing innovation and user-centric solutions!
                         <dl>
-                            <dt><b>SendAnnotation</b></dt>
-                            <dd>
+                            <dt><b><span style="color: #47f57b;">📌 SendAnnotation :</span></b></dt>
+                            <dd class="sendannotation-style" style="margin-left: 40px;">
                                 - The SendAnnotation project was designed to facilitate the seamless sharing and management of annotations. 
                                 Leveraging advanced backend technologies, this system allows users to annotate documents, images, and other content, and then share these annotations with collaborators in real-time. 
                                 The intuitive user interface ensures a smooth experience, enabling efficient collaboration and communication among users.
                             </dd>
-                            <dt><b>UserInfo</b></dt>
-                            <dd>
+                            <br>
+                            <dt><b><span style="color: #47f57b;">📌 UserInfo :</span></b></dt>
+                            <dd class="userinfo-style" style="margin-left: 40px;">
                                 - The UserInfo project focused on developing a robust user information management system. 
                                 This system provides a centralized platform where user data is stored, managed, and accessed securely. 
                                 Through the UserInfo system, administrators can efficiently handle user profiles, preferences, and settings, ensuring personalized and tailored user experiences across various applications and services.
                             </dd>
-                            <dt><b>Send Notification to User</b></dt>
-                            <dd>
+                            <br>
+                            <dt><b><span style="color: #47f57b;">📌 Send Notification to User :</span></b></dt>
+                            <dd class="sendnotification-style" style="margin-left: 40px;">
                                 - The Send Notification to User project aimed to enhance user engagement and communication by implementing a notification system. 
                                 This system allows administrators and applications to send real-time notifications to users, keeping them informed about important updates, events, or actions. 
                                 Utilizing push notification technologies, this system ensures timely and relevant communication, enhancing user satisfaction and interaction with the platform.
                             </dd>
+                            <style>
+                                .userinfo-style,
+                                .sendannotation-style,
+                                .sendnotification-style {
+                                    /* font-size: 20px; */
+                                    font-family: Cascadia Code ExtraLight;
+                                }
+                            </style>
                         </dl>
+                        <span style="color: Tomato;">#ProjectHighlights</span> 
+                        <span style="color: MediumSeaGreen;">#Innovation</span> 
+                        <span style="color: SlateBlue;">#UserExperience</span> 
+                        <span style="color: #007BFF;">#Collaboration</span>
                     </p>
                 </div>
             </div>
